react-library/k8s/deployment.yaml
# Create Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: my-app-namespace

---

# Deployment using the namespace
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
  namespace: my-app-namespace
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: us-central1-docker.pkg.dev/krisha-dev-459506/krisha-repo/react-app:__IMAGE_TAG__
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "250m"
