react-library/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: my-app-namespace
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
