react-library/k8s/ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "lb-react"
  namespace: "my-app-namespace"
spec:
  defaultBackend:
    service:
      name: "react-app-service"
      port:
        number: 80
status:
  loadBalancer: {}
